# HSIMPSDP

./: .gitignore  README.md  main.py  pyproject.toml  setup.py  simulate_interpo_error_mat.xlsx
models/: deltaSimpML.py  delta_simp.py  dp_mat.py  errorMat.py  model_mat.py  piecewiseApproxMat.py
ui/: mainWindow.py  ui.py  ui.ui
utils/: functions.py  grid_gen_theo_copy.py  random_sampling_mat.py
