[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hsimpsdp"
version = "1.0"
authors = [
  { name="Acheampong Solomon", email="achesolo@gmail.com" },
    { name="Luckny Zephr", email="" },
]
description = "Reservoi optimization package"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://https://github.com/achesolo/HSIMPSDP"
"Bug Tracker" = "https://github.com/achesolo/HSIMPSDP/issues"